openshift/adminer/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
management :
  endpoints:
    web:
      exposure:
        include: "health,info"
    health:
      show-details: "always"
