openshift/adminer/adminer-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adminer
spec:
  to:
    kind: Service
    name: adminer
  port:
    targetPort: 8080
  tls:
    termination: edge
management :
  endpoints:
    web:
      exposure:
        include: "health,info"
    health:
      show-details: "always"
